<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:isScrollContainer="true"
    android:measureAllChildren="true"
    android:orientation="vertical"
    tools:context=".ui.pages.detail.DetailUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/btn_back"
            android:background="@android:color/transparent"
            android:textColor="#1E1E1E"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/main_layout"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            android:drawableLeft="@drawable/arrow_left_24"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share"
            android:background="@android:color/transparent"
            android:textColor="#1E1E1E"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            android:drawableLeft="@drawable/baseline_share_24"
            android:contentDescription="Share Account Github"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            android:id="@+id/profile_group">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:id="@+id/iv_profile"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/cardview_dark_background"
                android:layout_marginEnd="16dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_repos"
                    android:text="@string/number"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repos"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_follower"
                    android:text="@string/number"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_following"
                    android:text="@string/number"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:id="@+id/tv_name_profile"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/profile_group"
            app:layout_constraintStart_toStartOf="@id/main_layout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_profile"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            android:id="@+id/tv_description"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_home_work_24"
            android:text="@string/company"
            android:layout_marginStart="16dp"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_company"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/main_layout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:text="@string/place"
            android:layout_marginStart="16dp"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_company"
            app:layout_constraintStart_toStartOf="@id/main_layout"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/visit_github"
            android:backgroundTint="@color/light"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:id="@+id/btn_open_user"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            app:layout_constraintBottom_toTopOf="@id/btn_open_user"
            app:layout_constraintTop_toBottomOf="@id/profile_group"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabs"
            android:background="?attr/colorOnPrimarySurface"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_open_user"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            android:contentDescription="Menu Tabs"/>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_pager"
            app:layout_constraintTop_toBottomOf="@id/tabs"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="@id/main_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>