<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:id="@+id/card_main">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_repos_name"
            android:text="@string/username"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintTop_toTopOf="@id/card_main"
            card_view:layout_constraintStart_toStartOf="@id/card_main"
            android:ellipsize="end"
            android:maxLines="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@id/tv_repos_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_repos_name"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/ll_info">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="16sp"
                android:id="@+id/tv_star"
                android:drawableLeft="@drawable/icon_star"
                android:drawablePadding="8sp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="16sp"
                android:id="@+id/tv_commit"
                android:drawableLeft="@drawable/icon_commit"
                android:drawablePadding="8sp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tv_description"
            card_view:layout_constraintTop_toBottomOf="@id/ll_info"
            card_view:layout_constraintStart_toStartOf="@id/ll_info"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>